added data loading script and requirements updated README

--- a/notebooks/exploratory/exploratory.ipynb
+++ b/notebooks/exploratory/exploratory.ipynb
@@ -2,13 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-12-31T08:44:13.484658Z",
+     "start_time": "2023-12-31T08:44:12.931962Z"
+    }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b650876fe3d92882"
   }
  ],
  "metadata": {
