Commented, clean up of feature_selection.ipynb and visualization.ipynb

--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# NOT WORKING YET"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "86e01309f426bd81"
+  },
+  {
    "cell_type": "code",
    "outputs": [
     {
