--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -31,14 +31,10 @@
     "from sklearn.preprocessing import StandardScaler"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:08:23.684975Z",
-     "start_time": "2024-01-20T16:08:23.682317Z"
-    }
+    "collapsed": false
    },
    "id": "f195c7b9f22f87ca",
-   "execution_count": 89
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -70,41 +66,14 @@
     "]"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:08:23.955069Z",
-     "start_time": "2024-01-20T16:08:23.951065Z"
-    }
+    "collapsed": false
    },
    "id": "4e7a33d4ec2f8a1a",
-   "execution_count": 90
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Raw data\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 162634 entries, 0 to 162633\n",
-      "Columns: 103 entries, event_id to AP\n",
-      "dtypes: float64(98), int64(4), object(1)\n",
-      "memory usage: 127.8+ MB\n",
-      "Filtered data\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3032 entries, 0 to 3031\n",
-      "Columns: 103 entries, event_id to AP\n",
-      "dtypes: float64(98), int64(4), object(1)\n",
-      "memory usage: 2.4+ MB\n",
-      "Full Training set shape: (1058, 16) (1058,)\n",
-      "Testing set shape: (265, 16) (265,)\n",
-      "Training set shape: (793, 16) (793,)\n",
-      "Validation set shape: (265, 16) (265,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load and data and filter it\n",
     "df = load_data()\n",
@@ -143,14 +112,10 @@
     "print(\"Validation set shape:\", X_val_scaled.shape, y_val.shape)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:08:27.359806Z",
-     "start_time": "2024-01-20T16:08:24.253542Z"
-    }
+    "collapsed": false
    },
    "id": "7b5cf00d03a05bc2",
-   "execution_count": 91
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -199,14 +164,10 @@
     "        best_models[model_name] = model.fit(X_train_scaled, y_train)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:12:09.195597Z",
-     "start_time": "2024-01-20T16:08:40.275872Z"
-    }
+    "collapsed": false
    },
    "id": "c8cb6fecba86b0fb",
-   "execution_count": 93
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -220,16 +181,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest - MSE on training set: 0.0252221522066577\n",
-      "Random Forest - MSE on validation set: 0.09327483330603102\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train Models\n",
     "for model_name, model in best_models.items():\n",
@@ -251,41 +203,14 @@
     "    print(f'{model_name} - MSE on validation set: {mse_val}')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:12:37.814351Z",
-     "start_time": "2024-01-20T16:12:36.448134Z"
-    }
+    "collapsed": false
    },
    "id": "9cd71e1565519fe3",
-   "execution_count": 94
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE on training set: 16.60860710153464\n",
-      "MAE on validation set: 16.24431772886256\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/frederikdallomo/Uni/Master/WS2324/ML/MLProject/.venv/lib/python3.10/site-packages/sklearn/base.py:458: UserWarning:\n",
-      "\n",
-      "X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "\n",
-      "/Users/frederikdallomo/Uni/Master/WS2324/ML/MLProject/.venv/lib/python3.10/site-packages/sklearn/base.py:458: UserWarning:\n",
-      "\n",
-      "X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
@@ -304,27 +229,14 @@
     "print(f\"MAE on validation set: {mae_val}\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:20:51.098766Z",
-     "start_time": "2024-01-20T16:20:51.072858Z"
-    }
+    "collapsed": false
    },
    "id": "a636ae0b9a276ba2",
-   "execution_count": 95
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R-squared on training set: -4.107831013263367\n",
-      "R-squared on validation set: -3.7795055479504978\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import r2_score\n",
     "\n",
@@ -336,17 +248,14 @@
     "\n",
     "# Print the R-squared values\n",
     "print(f\"R-squared on training set: {r2_train}\")\n",
-    "print(f\"R-squared on validation set: {r2_val}\")\n"
+    "print(f\"R-squared on validation set: {r2_val}\")\n",
+    "print(\"hi\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-20T16:21:26.103311Z",
-     "start_time": "2024-01-20T16:21:26.099449Z"
-    }
+    "collapsed": false
    },
    "id": "618ddf16e338f44e",
-   "execution_count": 96
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
