--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -414,7 +414,10 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "#recall = TP/P = TruePositive/Positive\n",
+    "#precision = TP/PP = TruePositive/PredPositive\n"
+   ],
    "metadata": {
     "collapsed": false
    },
