--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -24,6 +24,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "from src.utils.filtering import filter_data\n",
     "from src.utils.data_loading import load_data\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -31,10 +33,14 @@
     "from sklearn.preprocessing import StandardScaler"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T13:49:10.815225931Z",
+     "start_time": "2024-01-28T13:49:03.375554117Z"
+    }
    },
    "id": "f195c7b9f22f87ca",
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -66,30 +72,77 @@
     "]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T13:49:15.833494107Z",
+     "start_time": "2024-01-28T13:49:15.750562834Z"
+    }
    },
    "id": "4e7a33d4ec2f8a1a",
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw data\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 162634 entries, 0 to 162633\n",
+      "Columns: 103 entries, event_id to AP\n",
+      "dtypes: float64(98), int64(4), object(1)\n",
+      "memory usage: 127.8+ MB\n",
+      "Filtered data\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3032 entries, 0 to 3031\n",
+      "Columns: 103 entries, event_id to AP\n",
+      "dtypes: float64(98), int64(4), object(1)\n",
+      "memory usage: 2.4+ MB\n",
+      "(3032, 17)\n",
+      "Full Training set shape: (2425, 16) (2425,)\n",
+      "Testing set shape: (607, 16) (607,)\n",
+      "Training set shape: (1818, 16) (1818,)\n",
+      "Validation set shape: (607, 16) (607,)\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.impute import KNNImputer\n",
+    "nan = np.nan\n",
+    "class StopExecution(Exception):\n",
+    "    def _render_traceback_(self):\n",
+    "        return []\n",
+    "\n",
     "# Load and data and filter it\n",
     "df = load_data()\n",
     "df_filtered = filter_data(df)\n",
     "\n",
+    "\n",
+    "\n",
     "# Remove rows with missing values\n",
-    "df_filtered.dropna(axis=0, how=\"any\", inplace=True)\n",
+    "#df_filtered.dropna(axis=0, how=\"any\", inplace=True)\n",
+    "\n",
+    "#print(\"hi\")\n",
+    "\n",
     "\n",
     "# Label encode the categorical column \"c_object_type\"\n",
     "label_encode_column(df_filtered, \"c_object_type\")\n",
+    "\n",
+    "\n",
     "# Call the function to get the processed DataFrame\n",
     "df_processed = df_filtered[selected_features]\n",
-    "\n",
+    "arr_processed = df_processed.to_numpy()\n",
+    "imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
+    "arr_imputed=imputer.fit_transform(arr_processed)\n",
+    "print(arr_imputed.shape)\n",
+    "df_imputed = pd.DataFrame(data=arr_imputed[0:,0:],index=[i for i in range(arr_imputed.shape[0])],columns=selected_features)\n",
     "# Separate features and target variable\n",
-    "X = df_processed.drop('risk', axis=1)\n",
-    "y = df_processed['risk']\n",
+    "X = df_imputed.drop('risk', axis=1)\n",
+    "y = df_imputed['risk']\n",
     "\n",
     "# Split the data into training, testing, and validation sets\n",
     "X_train_full, X_test, y_train_full, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -112,10 +165,14 @@
     "print(\"Validation set shape:\", X_val_scaled.shape, y_val.shape)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-28T13:51:34.019162544Z",
+     "start_time": "2024-01-28T13:51:26.096897366Z"
+    }
    },
    "id": "7b5cf00d03a05bc2",
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -164,7 +221,11 @@
     "        best_models[model_name] = model.fit(X_train_scaled, y_train)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-01-28T13:55:30.808151086Z"
+    }
    },
    "id": "c8cb6fecba86b0fb",
    "execution_count": null
@@ -181,7 +242,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest - MSE on training set: 0.029886637427188643\n",
+      "Random Forest - MSE on validation set: 0.09465651937298585\n"
+     ]
+    }
+   ],
    "source": [
     "# Train Models\n",
     "for model_name, model in best_models.items():\n",
@@ -203,14 +273,37 @@
     "    print(f'{model_name} - MSE on validation set: {mse_val}')\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-24T15:17:04.330040323Z",
+     "start_time": "2024-01-24T15:17:01.609307633Z"
+    }
    },
    "id": "9cd71e1565519fe3",
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE on training set: 16.625454950015342\n",
+      "MAE on validation set: 16.258605110271596\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leo/ML_project/MLProject/venv/lib/python3.8/site-packages/sklearn/base.py:458: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/home/leo/ML_project/MLProject/venv/lib/python3.8/site-packages/sklearn/base.py:458: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
@@ -229,14 +322,28 @@
     "print(f\"MAE on validation set: {mae_val}\")\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-24T15:17:22.797991331Z",
+     "start_time": "2024-01-24T15:17:22.664742360Z"
+    }
    },
    "id": "a636ae0b9a276ba2",
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared on training set: -4.119008021062443\n",
+      "R-squared on validation set: -3.7891234703833687\n",
+      "hi\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import r2_score\n",
     "\n",
@@ -252,10 +359,14 @@
     "print(\"hi\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-24T15:17:38.676234052Z",
+     "start_time": "2024-01-24T15:17:38.661594768Z"
+    }
    },
    "id": "618ddf16e338f44e",
-   "execution_count": null
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -298,9 +409,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": ".venv",
+   "name": "python3",
    "language": "python",
-   "display_name": ".venv"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
