commit with KNNI imputer

--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -138,7 +138,7 @@
     "arr_processed = df_processed.to_numpy()\n",
     "imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
     "arr_imputed=imputer.fit_transform(arr_processed)\n",
-    "print(arr_imputed.shape)\n",
+    "#print(arr_imputed.shape)\n",
     "df_imputed = pd.DataFrame(data=arr_imputed[0:,0:],index=[i for i in range(arr_imputed.shape[0])],columns=selected_features)\n",
     "# Separate features and target variable\n",
     "X = df_imputed.drop('risk', axis=1)\n",
@@ -173,6 +173,16 @@
    },
    "id": "7b5cf00d03a05bc2",
    "execution_count": 4
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Added the KNNI imputer in the above cell"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5266ea9a9ff8ede5"
   },
   {
    "cell_type": "markdown",
