added KNNI imputer module

--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -177,7 +177,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Added the KNNI imputer in the above cell"
+    "Added the KNNI imputer in the above cell."
    ],
    "metadata": {
     "collapsed": false
