--- a/notebooks/modeling/modeling.ipynb
+++ b/notebooks/modeling/modeling.ipynb
@@ -147,9 +147,7 @@
     "df_imputed = pd.DataFrame(data=arr_imputed[0:,0:],index=[i for i in range(arr_imputed.shape[0])],columns=selected_features)\n",
     "# Separate features and target variable\n",
     "X = df_imputed.drop('risk', axis=1)\n",
-    "y = df_imputed['risk']\n",
-    "X = df_processed.drop('risk', axis=1)\n",
-    "y = df_processed['risk']"
+    "y = df_imputed['risk']"
    ],
    "metadata": {
     "collapsed": false,
