--- a/notebooks/engineering/compare_selected_features_nan.ipynb
+++ b/notebooks/engineering/compare_selected_features_nan.ipynb
@@ -22,14 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T14:31:39.246319Z",
-     "start_time": "2024-02-01T14:31:39.237981Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -87,33 +83,14 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T14:31:39.913339Z",
-     "start_time": "2024-02-01T14:31:39.907784Z"
-    }
+    "collapsed": false
    },
    "id": "f508e85ab056627c",
-   "execution_count": 5
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Common features: {'t_rcs_estimate', 'c_span', 'c_time_lastob_end', 'c_cr_area_over_mass', 'max_risk_scaling', 'c_obs_used', 'c_obs_available', 'time_to_tca', 'max_risk_estimate', 'c_time_lastob_start', 'miss_distance', 'mahalanobis_distance'}\n",
-      "Number of common features: 12\n",
-      "----------------------------------------------------------------\n",
-      "Features only in selected_features_final: {'t_cndot_r', 'c_sigma_t', 'geocentric_latitude', 'c_sigma_rdot'}\n",
-      "Number of features only in selected_features_final: 4\n",
-      "----------------------------------------------------------------\n",
-      "Features only in another_list: {'c_weighted_rms', 'relative_position_t', 'relative_velocity_n', 't_j2k_sma'}\n",
-      "Number of features only in another_list: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Features in both lists (intersection)\n",
     "common_features = selected_features_without_nan.intersection(selected_features_with_nan)\n",
@@ -136,14 +113,10 @@
     "print(\"Number of features only in another_list:\", len(unique_to_another))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-01T14:31:40.084607Z",
-     "start_time": "2024-02-01T14:31:40.078288Z"
-    }
+    "collapsed": false
    },
    "id": "3f058a3f404bff36",
-   "execution_count": 6
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
